membershipplan controller